# ai-data-eng

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  docker-compose.yml  pyproject.toml  requirements.sandbox.txt  sample_project.json
scripts/: provide_clarification.py  reset_failed_run.py  run.py  seed_sample_project.py  setup_db.py
src/: __init__.py  config.py
src/agents/: architect_agent.py  engineer_agent.py  pm_agent.py  qa_agent.py  qa_test_gen.py
src/memory/: __init__.py  store.py
src/models/: __init__.py  base.py  errors.py  project.py
src/models/agents/: __init__.py  architect.py  engineer.py  pm.py  qa.py
src/observability/: __init__.py  logger.py  metrics.py  tracing.py
src/orchestrator/: engine.py  retry.py  scheduler.py
src/sandbox/: __init__.py  data_sample.py  executor.py  security.py
src/state/: artifacts.py  backend.py  postgres.py
tests/: test_artifacts.py  test_models.py  test_retry.py  test_scheduler.py  test_security.py
